k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-api
  namespace: f1
spec:
  selector:
    app: f1-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
