k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-frontend
  namespace: f1
spec:
  selector:
    app: f1-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
